# minichatgpt

./: .gitignore  README.md  pyproject.toml
data/: sample_chat.jsonl  tiny_corpus.txt
scripts/: chat.py  finetune_chat.py  pretrain.py  train_tokenizer.py
src/minichatgpt/: __init__.py  chat.py  config.py  dataset.py  model.py  tokenizer.py  trainer.py  utils.py
src/minichatgpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model.py  test_tokenizer.py
